# gpt4all-cli

./: README.md  cli.py  dev-cli.py  pyproject.toml  requirements.dev.txt  requirements.txt
.github/workflows/: tests.yml
gpt4all_cli/: __init__.py  __main__.py  constants.py  data_classes.py  gpt.py  web_ui.py
gpt4all_cli/cli/: cli_app.py  dev.py
gpt4all_cli/tests/: test_doctests.py  test_project_setup.py
